test/types/records/split-init/error-never-initialized.chpl
proc error() {
  var a;
  type t;
}
error();

var b;
type tt;

var c;
c = 1;
type ttt;
ttt = int;
